#=======================================================================================================================
         project(commons)
#=======================================================================================================================
     add_library(commons)
#=======================================================================================================================
add_subdirectory(core)
#=======================================================================================================================