#=======================================================================================================================
         project(commons LANGUAGES CXX)
#=======================================================================================================================
     add_library(commons)
#=======================================================================================================================
add_subdirectory(core)
#=======================================================================================================================