#=======================================================================================================================
         project(graphics LANGUAGES CXX)
#=======================================================================================================================
     add_library(graphics)
#=======================================================================================================================
add_subdirectory(core)
#=======================================================================================================================
add_subdirectory(opengl)
#=======================================================================================================================