#=======================================================================================================================
         project(platform)
#=======================================================================================================================
     add_library(${PROJECT_NAME})
#=======================================================================================================================
add_subdirectory(core)
#=======================================================================================================================