#=======================================================================================================================
         project(platform)
#=======================================================================================================================
     add_library(platform)
#=======================================================================================================================
add_subdirectory(core)
#=======================================================================================================================
add_subdirectory(windows)
#=======================================================================================================================